<resources>
    <string name="app_name">TeaBreak_App</string>
    <string name="nav_open">nav_open</string>
    <string name="nav_close">nav_close\n\n</string>
    <string name="categories">Categories</string>
    <string name="view_all"><![CDATA[View All >>]]></string>
    <string name="coffee_powder">Coffee Powder</string>
    <string name="default_notification_channel_id">TeaBreak</string>
    <string name="total_amount">Total Amount</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="delivery_mode">Delivery Mode</string>
    <string name="delivery_type">Delivery Type</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="coloon">:</string>
    <string name="_0">0</string>
    <string name="proceed">Proceed</string>
    <string name="version">Version</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_bag">Categories</string>
    <string name="clear_all">Clear All</string>
    <string name="cart_list">Cart List</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="my_orders">My Orders</string>
    <string name="my_wallet">My Wallet</string>
    <string name="order_no">Order Number</string>
    <string name="_1234456789">1234456789</string>
    <string name="order_date">Order Date</string>
    <string name="date">date</string>
    <string name="amount">Amount</string>
    <string name="_12000">12000</string>
    <string name="vehicle">Vehicle</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="debit_card">Debit Card</string>
    <string name="_230">230</string>
    <string name="name">Name</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="tea_powder">tea_powder</string>
    <string name="quantity_pack">quantity_pack</string>
    <string name="_400">400</string>
    <string name="elachi">Elachi</string>
    <string name="_1kg">1Kg</string>
    <string name="_98">₹98</string>
    <string name="cart">Cart</string>
    <string name="tea_break">Tea Break</string>
    <string name="hello">Hello</string>
    <string name="viewall"><![CDATA[ViewAll >>]]></string>
    <string name="order_number">Order Number</string>
    <string name="_9812479373">9812479373</string>
    <string name="order_total">Order Total</string>
    <string name="ordered_date">Ordered Date</string>
    <string name="wallet_amount_is">Wallet Amount is</string>
    <string name="pay">Pay</string>
    <string name="items_list">Items List</string>
    <string name="quantity">Quantity</string>
    <string name="_20">20</string>
    <string name="_300">300</string>
    <string name="change_password">Change Password</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="orders_details">Orders Details</string>
    <string name="payment">Payment</string>
    <string name="search">Search</string>
    <string name="quantity_update">Quantity Update</string>
    <string name="enter_number">Enter Number</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="singleitem">Singleitem</string>
    <array name="Deliverymode">
        <item>Select</item>
        <item>Pick Up</item>
        <item>Vehicle Delivery</item>
        <item>Courier</item>
    </array>
    <array name="Deliverytype">
        <item>Select</item>
        <item>APSTRC</item>
        <item>TSRTC</item>
        <item>RAILWAYS</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_quantity">Total-Quantity</string>
    <string name="total_price">Total-Price</string>
    <string name="created_date">Created Date</string>

    <string name="string_permission_help">Help</string>
    <string name="string_permission_help_text">The permission is missing.\n\nTo grant this permission click on Settings, then Permissions and turn the permission on.\n\nThen click back twice to return to the app</string>
    <string name="string_permission_quit">Exit App</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="submit">Submit</string>

    <array name="accountant_status">
        <item>Select</item>
        <item>Approved</item>
    </array>

</resources>