<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.glitss.teabreak_app.Ui.Checkout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/ll"
        android:weightSum="1"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/toolbar"
            android:elevation="4dp"
            android:background="@color/red"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="2dp"
                    android:layout_gravity="center"
                    android:src="@drawable/backarrow" />

                <TextView
                    android:id="@+id/tlbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/items_list"
                    android:layout_marginStart="30dp"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderedListItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.8"
        tools:listitem="@layout/custom_ordered_list_card"
        android:layout_margin="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.3"
        android:weightSum="3"
        android:layout_margin="10dp">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="@string/total_amount" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/coloon"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.4"
                android:layout_marginStart="80dp"
                android:textColor="@color/black"
                android:text="@string/_0" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.3"
        android:visibility="gone"
        android:weightSum="3"
       >


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:text="Delivery Charges" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/coloon"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/delivery_charges"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:layout_marginStart="80dp"
            android:textColor="@color/black"
            android:text="@string/_0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.7"
        android:layout_alignParentBottom="true">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/previous"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:textColor="#228B22"
            android:background="@drawable/bg2"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/back"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Proceed"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:background="@drawable/bg2"
            android:gravity="center"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="#228B22"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
